--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
+	<script src="https://cdn.optimizely.com/js/19937825175.js"></script>
 
 	<script defer src='./build/bundle.js'></script>
 </head>
